CXFSA-69: Fix dropdown overlapping

--- a/projects/fsastorefrontstyles/scss/overrides/header.scss
+++ b/projects/fsastorefrontstyles/scss/overrides/header.scss
@@ -144,6 +144,9 @@ header {
           text-transform: uppercase;
         }
       }
+      .wrapper {
+        z-index: 20000;
+      }
       &.accNavComponent {
         nav {
           position: relative;
